--- a/Makefile.am
+++ b/Makefile.am
@@ -26,7 +26,7 @@ include Makefile-msvcproj.am
 ## Process this file with automake to produce Makefile.in
 ACLOCAL_AMFLAGS = -I m4 ${ACLOCAL_FLAGS}
 
-SUBDIRS = . tests build
+SUBDIRS = . docs tests build
 
 DIST_SUBDIRS = m4 $(SUBDIRS)
 DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
