--- a/project.config
+++ b/project.config
@@ -1,6 +1,4 @@
 [access]
 	inheritFrom = scm/acls/domain_system/base
 [project]
-	description = "Domain: System;"\n\
-"Licenses: LGPL-2.0+,GPL;"\n\
-
+	description = "Domain: System / Base;"
